fix color contrast issue

--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -2,7 +2,7 @@
 
 $colors: (
 	text: hsl(0 0% 13%),
-	text-muted: hsl(0 0% 44%),
+	text-muted: hsl(0 0% 43%),
 	primary: hsl(306 100% 69%),
 	border: hsl(306 14% 94%),
 	background: hsl(0 0% 100%),
